samples/_failures_safe/1761154185_b10121_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cde76b10.c: In function ‘main’:
./samples/SAFE/__tmp_cde76b10.c:133:13: error: expected declaration or statement at end of input
  133 |             }
      |             ^
./samples/SAFE/__tmp_cde76b10.c:133:13: error: expected declaration or statement at end of input
